--- a/styles/index.css
+++ b/styles/index.css
@@ -14,6 +14,7 @@ body {
 
 .toolbar {
   width: 250px;
+  overflow: auto;
   background: rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(10px);
   padding: 20px;
@@ -198,7 +199,8 @@ body {
   min-height: 80px;
 }
 
-.input-output {
+.input,
+.output {
   border-radius: 20px;
   min-width: 80px;
   min-height: 40px;
