--- a/public/styles/bars.css
+++ b/public/styles/bars.css
@@ -5,18 +5,23 @@
 }
 
 .bar {
-  width: 280px;
+  flex: 1;
   overflow-y: auto;
-  background: linear-gradient(
-    180deg,
-    hsla(var(--color-primary-fg), 0.1) 0%,
-    hsla(var(--color-primary-fg), 0.15) 100%
-  );
-  backdrop-filter: blur(15px);
-  padding: 25px;
-  box-shadow: 0 4px 20px hsla(var(--color-primary-fg), 0.2);
-  border-left: 1px solid hsla(var(--color-primary-fg), 0.3);
+  border: 1px solid hsl(var(--color-primary-fg));
   color: hsl(var(--color-primary-fg));
+
+  transition: all 1s ease;
+
+  padding: 16px;
+  margin-left: 16px;
+  max-width: 300px;
+  opacity: 1;
+}
+.bar.hid {
+  padding: 0;
+  margin-left: 0;
+  max-width: 0;
+  opacity: 0;
 }
 
 .bar h2 {
@@ -26,7 +31,7 @@
   text-align: center;
   border-bottom: 2px solid hsla(var(--color-primary-fg), 0.4);
   padding-bottom: 12px;
-  text-shadow: 0 0 8px hsla(var(--color-primary-fg), 0.5);
+  text-shadow: 0 0 8px hsla(var(--color-primary-fg), 0.2);
 }
 
 .propLabel {
@@ -39,13 +44,10 @@
 
 .readonlyProp {
   margin: 10px 0;
-  background-color: hsla(var(--color-primary-fg), 0.1);
   padding: 10px;
   border-radius: 6px;
-  border: 1px solid hsla(var(--color-primary-fg), 0.3);
   box-shadow: inset 0 2px 4px hsla(var(--color-primary-fg), 0.1);
-  font-family: monospace;
-  font-size: 13px;
+  border: 1px solid hsla(var(--color-primary-fg), 0.2);
 }
 
 .propValue {
